<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel App</string>
    <string name="hello_world">Under construction!</string>
    <string name="action_settings">Settings</string>
    <string name="dawson">Dawson</string>
    <string name="course">Course</string>
    <string name="team">Team</string>
    <string name="web">Web Ver.</string>

    <!-- Tip STRINGS -->
    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="amount">Bill Amount: </string>
    <string name="hint_amount">Enter bill amount</string>
    <string name="tip10">10%</string>
    <string name="tip15">15%</string>
    <string name="tip20">20%</string>
    <string name="divide">Divide By [OPTIONAL]: </string>
    <string name="hint_divide">Enter # of people</string>
    <string name="tip">Tip percent:</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="tipTotal">Tip Total:&#160;</string>
    <string name="billTotal">Bill Total:&#160;</string>
    <string name="eachPerson">Each Person:&#160;</string>
    <string name="defaultValue">0.00</string>
    <string name="err_invalid_amount">Error: Amount is invalid, must be a positive number</string>
    <string name="err_max_split">Error: can split bill with maximum 50 people, defaulted to 1</string>
    <string name="tip_total">Tip Total</string>
    <string name="bill_total">Bill Amount</string>
    <string name="split_amount">Split Amount</string>

    <!-- Unit converter STRINGS -->
    <string name="title_activity_unit_converter">Unit Converter</string>
    <string name="hint_unit">Enter unit to convert</string>
    <string name="convert">Convert</string>
    <string name="swap_desc">Swap button</string>
    <string name="equals_desc">Equals image</string>
    <string name="amount_hint">Enter an amount</string>

    <!-- Miscellaneous STRINGS -->
    <string name="title_activity_about">About</string>
    <string name="title_activity_current_trips">Current Trip</string>
    <string name="category">category</string>
    <string name="initial_position">initial_unit</string>
    <string name="conversion_position">conversion_unit</string>
    <string name="convert_amount">amount</string>
    <string name="convert_result">result</string>
    <string name="selectdate">Select Date</string>

    <!-- STARTUP STRINGS -->
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username">Enter your username   </string>
    <string name="fname">Enter your first name </string>
    <string name="lname">Enter yout last name  </string>
    <string name="enter">Enter</string>

    <!-- WEATHER STRINGS -->
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>

    <!-- TRIPS & ITINERARIES STRINGS -->
    <string name="title_activity_itinerary">Itineraries</string>
    <string name="title_activity_trip">Trip</string>
    <string name="syncBtn">Sync</string>
    <string name="test_connection">Test Connection</string>
    <string name="credentials">Invalid credentials</string>
    <string name="network">Check Network Connection</string>
    <string name="no_trips">You have no trips</string>
    <string name="trips">There are trips</string>

    <!-- CURRENCY STRINGS -->
    <string name="title_activity_currency_converter">Currency Converter</string>
    <string name="initial_currency_hint">Enter amount to convert</string>
    <string name="initial_amount">initial_amount</string>
    <string name="result_amount">result_amount</string>
    <string name="init_position">init_position</string>
    <string name="result_position">result_position</string>
    <string name="connection_err_msg">No network connection available</string>
    <string name="retrieve_err_msg">Unable to retrieve conversion</string>
    <string name="json_err_msg">Unable to parse conversion</string>
    <string name="title_activity_to_be_created">ToBeCreatedActivity</string>
    <string name="to_be_created">Under construction</string>
    <string name="title_activity_settings_ativity">Settings</string>

    <!-- Itinerary STRINGS -->
    <string name="itinerary_title">Budgeted Expenses</string>
    <string name="actual_expense_title">Actual Expenses</string>
    <string name="title_activity_add_itinerary">Add Itinerary</string>
    <string name="addBtn">ADD</string>
    <string name="location">Location</string>
    <string name="location_name">Name:</string>
    <string name="location_description">Description:</string>
    <string name="location_city">City:</string>
    <string name="location_code">Country Code:</string>
    <string name="departureDate">Departure Date</string>
    <string name="arrivalDate">Arrival Date</string>
    <string name="description">Short Description:</string>
    <string name="itinerary_amount">Amount:</string>
    <string name="itinerary_category">Category:</string>
    <string name="name_of_supplier">Name of Supplier:</string>
    <string name="address">Address:</string>
    <string name="addItinerary">Add itinerary</string>
    <string name="editItinerary">Save Edit</string>
    <string name="dateFormat">mm/dd/yyyy</string>
    <string name="departureError">Please enter the departure date</string>
    <string name="arrivalError">Please enter the arrival date</string>
    <string name="title_activity_edit">Edit Activity</string>
    <string name="separator"> - </string>
    <string name="title_activity_today_activity_list">Today Activity List</string>
    <string name="dollar">$</string>

    <!-- Settings String -->
    <string name="settings_username">Username:</string>
    <string name="settings_password">Password:</string>
    <string name="settings_firstname">First name:</string>
    <string name="settings_lastname">Last name:</string>
    <string name="settings_countrycode">Country Code:</string>
    <string name="settings_currency">Currency:</string>
    <string name="settings_city">City:</string>
    <string name="settings_save">SAVE</string>

    <!-- About Strings -->
    <string name="about_text">As part of our Mobile Software Development course at Dawson College, the Wanderlust Team was asked to create an
        application which allows the user to plan out his whole trip. It allows you to plan the locations you will be visiting.  It also permits you 
        to add budgeted expenses to keep track of what you plan on buying and also add the actual expenses you make on your trips.  This app offers a
        wide array of tools such as a currency converter, a unit converter, a weather checker and even a tip calculator. Hope you find what you need.
        Safe travels fellow wanderers</string>

</resources>