<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wanderlust.travelproject.TipCalculatorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/tip"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tip10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip10"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/tip15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip15"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/tip20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/tip20"
                android:textColor="@color/white" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/divide"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/divideEditText"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:hint="@string/hint_divide"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/clearButton"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:onClick="clearFields"
            android:text="@string/clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_bigger"
            android:onClick="calculateTip"
            android:text="@string/calculate"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:gravity="end"
            android:text="@string/tipTotal"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />

        <TextView
            android:id="@+id/tipTotalTextView"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/defaultValue"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:gravity="end"
            android:text="@string/billTotal"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />

        <TextView
            android:id="@+id/billTotalTextView"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/defaultValue"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:gravity="end"
            android:text="@string/eachPerson"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />

        <TextView
            android:id="@+id/eachPersonTextView"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight"
            android:text="@string/defaultValue"
            android:textColor="@color/white"
            android:textSize="@dimen/converter" />
    </LinearLayout>

</LinearLayout>